--- a/resources/assets/sass/components/_general.scss
+++ b/resources/assets/sass/components/_general.scss
@@ -84,4 +84,79 @@ pre, code {
     left: 0;
     bottom: 0;
   }
+
+  .results-container {
+    margin-top: 100px;
+
+    .results {
+      li {
+        position: relative;
+        padding: 10px 20px;
+        border-radius: 0 3px 3px 0;
+        transition: background 0.1s;
+        margin-bottom: 20px;
+
+        &.api::before {
+          background: #04F199;
+        }
+
+        &.category::before {
+          background: #04BAF1;
+        }
+
+        &:hover {
+          background: #eee;
+
+          &::before {
+            opacity: 1;
+          }
+        }
+
+        a {
+          color: #444;
+
+          h3 {
+            font-weight: 900;
+            letter-spacing: 1px;
+            margin: 0;
+            text-transform: capitalize;
+          }
+
+          small {
+            margin-bottom: 10px;
+            display: block;
+            font-style: italic;
+            color: #777;
+          }
+
+          p {
+            line-height: 1.5;
+          }
+
+          *:first-child {
+            margin-top: 0;
+          }
+
+          *:last-child {
+            margin-bottom: 0;
+          }
+
+          &:hover {
+            text-decoration: none;
+          }
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          height: 100%;
+          width: 5px;
+          opacity: 0.4;
+          top: 0;
+          left: 0;
+          transition: opacity 0.1s;
+        }
+      }
+    }
+  }
 }
