--- a/resources/assets/sass/components/_header.scss
+++ b/resources/assets/sass/components/_header.scss
@@ -39,6 +39,10 @@ header.banner {
         padding: 0 0 0 5px;
         color: #aaa;
       }
+
+      a {
+        color: white;
+      }
     }
   }
 
