--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5960,6 +5960,19 @@ pre, code {
   font-size: 1.1em;
   font-family: 'Source Code Pro', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace !important; }
 
+.error {
+  background: #eee;
+  color: #777; }
+  .error .container {
+    text-align: center;
+    padding: 200px 0; }
+    .error .container a {
+      color: #777; }
+    .error .container h2 {
+      font-size: 4em;
+      font-weight: 100;
+      padding-bottom: 1em; }
+
 #search {
   position: fixed;
   box-sizing: content-box;
