--- a/resources/assets/sass/components/_general.scss
+++ b/resources/assets/sass/components/_general.scss
@@ -24,6 +24,26 @@ pre, code {
   font-family: 'Source Code Pro', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace !important;
 }
 
+.error {
+  background: #eee;
+  color: #777;
+
+  .container {
+    text-align: center;
+    padding: 200px 0;
+
+    a {
+      color: #777;
+    }
+
+    h2 {
+      font-size: 4em;
+      font-weight: 100;
+      padding-bottom: 1em;
+    }
+  }
+}
+
 #search {
   position: fixed;
   box-sizing: content-box;
